crates/connectors/ndc-postgres/tests/snapshots/query_tests__native_queries__select_artist.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      },
      {
        "Name": "Alice In Chains"
      }
    ]
  }
]
